--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#42A591</color>
+    <color name="colorPrimaryDark">#007664</color>
+    <color name="colorAccent">#76d7c1</color>
+
+    <color name="white">#ffffff</color>
+
+    <color name="colorSecondary">#7F0000</color>
+    <color name="colorSecondaryDark">#4e0000</color>
+    <color name="colorSecondaryAccent">#b53d2a</color>
 </resources>
