reorganise LoginActivity with constrain layout and improved widgets

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#007664</color>
     <color name="colorAccent">#76d7c1</color>
 
-    <color name="white">#ffffff</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="colorSecondary">#7F0000</color>
     <color name="colorSecondaryDark">#4e0000</color>
