--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,14 +10,13 @@
 
     <ImageView
             android:id="@+id/logo"
-            android:layout_width="229dp"
-            android:layout_height="201dp"
-            android:layout_marginTop="68dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="213dp"
+            android:layout_height="168dp"
             app:srcCompat="@drawable/logo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/email_input"
-            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/logo"
+            android:layout_marginTop="56dp"
+            android:layout_marginBottom="37dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/email_input" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
     <EditText
             android:id="@+id/email_input"
@@ -26,15 +25,14 @@
             android:inputType="textEmailAddress"
             android:ems="10"
             android:hint="@string/prompt_email"
-            android:backgroundTint="@color/colorSecondary"
-            android:layout_marginLeft="53dp" android:layout_marginStart="53dp"
-            android:layout_marginEnd="53dp"
-            android:layout_marginRight="53dp"
-            android:layout_marginBottom="14dp"
-            app:layout_constraintTop_toBottomOf="@+id/logo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/password_input"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:backgroundTint="@color/white"
+            android:autofillHints="email"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginBottom="15dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/password_input"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="34dp"
+            android:layout_marginStart="34dp" android:layout_marginEnd="34dp" android:layout_marginRight="34dp"/>
 
     <EditText
             android:id="@+id/password_input"
@@ -43,44 +41,51 @@
             android:inputType="textPassword"
             android:ems="10"
             android:hint="@string/prompt_password"
-            android:backgroundTint="@color/colorSecondary"
-            android:layout_marginLeft="53dp"
-            android:layout_marginStart="53dp"
-            android:layout_marginEnd="53dp"
-            android:layout_marginRight="53dp"
-            app:layout_constraintTop_toBottomOf="@+id/email_input"
-            android:layout_marginBottom="56dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/login_button"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:backgroundTint="@color/white"
+            android:autofillHints="password"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@+id/email_input" android:layout_marginBottom="26dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/forgot_password_text"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="35dp"
+            android:layout_marginStart="35dp" android:layout_marginEnd="35dp" android:layout_marginRight="35dp"/>
 
     <Button
             android:text="@string/action_sign_in"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="68dp"
             android:id="@+id/login_button"
             android:background="@drawable/shape"
-            android:layout_marginLeft="52dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginEnd="52dp"
-            android:layout_marginRight="52dp"
-            android:layout_marginBottom="120dp"
-            app:layout_constraintTop_toBottomOf="@+id/password_input"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/forgot_password_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            android:elevation="0mm"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" android:layout_marginBottom="34dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/register_button"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
+            android:layout_marginStart="36dp" android:layout_marginEnd="36dp" android:layout_marginRight="36dp"/>
     <Button
+            android:text="@string/action_register"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:id="@+id/register_button"
+            android:textAllCaps="false"
+            android:textStyle="normal"
+            android:background="@drawable/shape"
+            android:textColor="@color/white"
+            android:elevation="0mm"
+            style="?android:attr/borderlessButtonStyle"
+            app:layout_constraintTop_toBottomOf="@+id/login_button" android:layout_marginBottom="49dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="36dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="36dp" android:layout_marginEnd="36dp" android:layout_marginRight="36dp"/>
+    <TextView
             android:text="@string/action_forgot_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/forgot_password_button"
-            android:textAllCaps="false"
-            android:textStyle="normal"
-            android:background="@color/colorPrimary"
-            android:layout_marginBottom="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/login_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/forgot_password_text"
+            android:textColor="@color/white" android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="37dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/login_button"
+            app:layout_constraintStart_toStartOf="parent"/>
 </android.support.constraint.ConstraintLayout>
