--- a/app/src/main/res/drawable-v24/register_button.xml
+++ b/app/src/main/res/drawable-v24/register_button.xml
@@ -3,7 +3,7 @@
         android:color="?android:colorControlHighlight" >
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark"/>
+            <solid android:color="@color/colorAccent"/>
             <stroke android:color="@color/white"
                     android:width="0dp" />
             <corners android:radius="20dp" />
