--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,10 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
+        android:theme="@style/TitleBar"
+        tools:context=".RegisterActivity">
 
+    <TextView
+            android:text="@string/action_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="69dp" app:layout_constraintEnd_toEndOf="parent"/>
+    <android.support.v7.widget.AppCompatEditText
+            android:layout_width="312dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:autofillHints="firstname"
+            app:backgroundTint="@color/white"
+            android:ems="10"
+            android:hint="@string/hint_first_name"
+            android:id="@+id/first_name_input"
+            android:textColorHint="@color/white" android:textColor="@color/white"
+            android:layout_marginTop="172dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="23dp"
+            android:layout_marginStart="23dp" android:layout_marginEnd="23dp" android:layout_marginRight="23dp"
+            android:layout_marginBottom="49dp" app:layout_constraintBottom_toTopOf="@+id/progress_bar"/>
+
+    <android.support.v7.widget.AppCompatEditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:autofillHints="lastname"
+            android:ems="10"
+            android:hint="@string/hint_last_name"
+            android:id="@+id/last_name_input"
+            android:textColorHint="@color/white" android:textColor="@color/white"
+            android:layout_marginTop="7dp"
+            app:layout_constraintTop_toBottomOf="@+id/first_name_input" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginRight="24dp"/>
+
+    <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/email_input"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:hint="@string/prompt_email"
+            app:backgroundTint="@color/white"
+            android:autofillHints="email"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/last_name_input" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp" android:layout_marginEnd="25dp" android:layout_marginRight="25dp"/>
+
+    <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/password_input"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:hint="@string/prompt_password"
+            app:backgroundTint="@color/white"
+            android:autofillHints="password"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:layout_marginTop="11dp"
+            app:layout_constraintTop_toBottomOf="@+id/email_input" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="23dp"
+            android:layout_marginStart="23dp" android:layout_marginEnd="23dp" android:layout_marginRight="23dp"/>
+
+    <Button
+            android:text="@string/action_register"
+            android:layout_width="0dp"
+            android:textAllCaps="false"
+            android:background="@drawable/login_button"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_height="58dp"
+            android:id="@+id/register_button" android:textColor="@color/white"
+            android:layout_marginBottom="56dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="28dp" android:layout_marginStart="28dp" android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp" app:layout_constraintEnd_toEndOf="parent"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="121dp"
+            android:layout_height="0dp"
+            android:id="@+id/progress_bar"
+            app:layout_constraintTop_toBottomOf="@+id/first_name_input" android:layout_marginBottom="267dp"
+            app:layout_constraintEnd_toEndOf="@+id/password_input"
+            app:layout_constraintStart_toStartOf="@+id/last_name_input" android:layout_marginLeft="96dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="96dp"
+            android:layout_marginEnd="96dp" android:layout_marginRight="96dp"/>
 </android.support.constraint.ConstraintLayout>
