--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,90 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        tools:context=".LoginActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
 
-    <ImageView
-            android:id="@+id/logo"
-            android:layout_width="213dp"
-            android:layout_height="168dp"
-            app:srcCompat="@drawable/logo"
-            android:contentDescription="@string/logo"
-            android:layout_marginTop="56dp"
-            android:layout_marginBottom="37dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/email_input" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-    <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/email_input"
-            android:layout_width="306dp"
+    <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:hint="@string/prompt_email"
-            app:backgroundTint="@color/white"
-            android:autofillHints="email"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginBottom="15dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/password_input"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp" android:layout_marginEnd="34dp" android:layout_marginRight="34dp"/>
+            android:background="@color/colorPrimary"
+            tools:context=".LoginActivity">
 
-    <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/password_input"
-            android:layout_width="304dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:hint="@string/prompt_password"
-            app:backgroundTint="@color/white"
-            android:autofillHints="password"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@+id/email_input" android:layout_marginBottom="26dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/forgot_password_text"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="35dp"
-            android:layout_marginStart="35dp" android:layout_marginEnd="35dp" android:layout_marginRight="35dp"/>
+        <ImageView
+                android:id="@+id/logo"
+                android:layout_width="213dp"
+                android:layout_height="164dp"
+                app:srcCompat="@drawable/logo"
+                android:contentDescription="@string/logo"
+                android:layout_marginTop="16dp" android:layout_marginBottom="187dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/login_button"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
 
-    <Button
-            android:text="@string/action_sign_in"
-            android:layout_width="300dp"
-            android:layout_height="67dp"
-            android:id="@+id/login_button"
-            android:background="@drawable/login_button"
-            android:textColor="@color/white"
-            android:textAllCaps="false"
-            style="?android:attr/borderlessButtonStyle"
-            app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" android:layout_marginBottom="34dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/register_button"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
-            android:layout_marginStart="36dp" android:layout_marginEnd="36dp" android:layout_marginRight="36dp"/>
-    <Button
-            android:text="@string/action_register"
-            android:layout_width="298dp"
-            android:layout_height="52dp"
-            android:id="@+id/register_button"
-            android:textAllCaps="false"
-            android:textStyle="normal"
-            android:background="@drawable/register_button"
-            android:textColor="@color/white"
-            style="?android:attr/borderlessButtonStyle"
-            app:layout_constraintTop_toBottomOf="@+id/login_button" android:layout_marginBottom="49dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="36dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="36dp" android:layout_marginEnd="36dp" android:layout_marginRight="36dp"/>
-    <TextView
-            android:text="@string/action_forgot_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/forgot_password_text"
-            android:textColor="@color/white" android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="37dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/login_button"
-            app:layout_constraintStart_toStartOf="parent"/>
-</android.support.constraint.ConstraintLayout>
+        <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/email_input"
+                android:layout_width="306dp"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:hint="@string/prompt_email"
+                app:backgroundTint="@color/white"
+                android:autofillHints="email"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginBottom="15dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/password_input"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="34dp"
+                android:layout_marginStart="34dp" android:layout_marginEnd="34dp" android:layout_marginRight="34dp"/>
+
+        <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/password_input"
+                android:layout_width="304dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:hint="@string/prompt_password"
+                app:backgroundTint="@color/white"
+                android:autofillHints="password"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toBottomOf="@+id/email_input" android:layout_marginBottom="26dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/forgot_password_text"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="35dp"
+                android:layout_marginStart="35dp" android:layout_marginEnd="35dp" android:layout_marginRight="35dp"/>
+
+        <Button
+                android:text="@string/action_sign_in"
+                android:layout_width="0dp"
+                android:layout_height="77dp"
+                android:id="@+id/login_button"
+                android:background="@drawable/login_button"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
+                style="?android:attr/borderlessButtonStyle"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_marginRight="30dp"
+                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="28dp"
+                app:layout_constraintBottom_toTopOf="@+id/register_button"/>
+        <Button
+                android:text="@string/action_register"
+                android:layout_width="298dp"
+                android:layout_height="52dp"
+                android:id="@+id/register_button"
+                android:textAllCaps="false"
+                android:textStyle="normal"
+                android:background="@drawable/register_button"
+                android:textColor="@color/white"
+                style="?android:attr/borderlessButtonStyle"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="36dp"
+                android:layout_marginStart="36dp" android:layout_marginEnd="36dp" android:layout_marginRight="36dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintHorizontal_bias="0.5"/>
+        <TextView
+                android:text="@string/action_forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/forgot_password_text"
+                android:textColor="@color/white" android:textSize="12sp"
+                app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="37dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/login_button"
+                app:layout_constraintStart_toStartOf="parent"/>
+        <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progress_bar" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"/>
+
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
