--- a/app/src/main/res/layout/app_bar_account.xml
+++ b/app/src/main/res/layout/app_bar_account.xml
@@ -5,7 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeActivity">
+        tools:context=".AccountActivity"
+        android:background="@color/colorPrimary">
 
     <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
@@ -13,7 +14,7 @@
             android:theme="@style/AppTheme.Launcher.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_home"
+                android:id="@+id/toolbar_account"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
@@ -21,14 +22,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_home"/>
+    <include layout="@layout/content_account"/>
 
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/add_icon"/>
+
 
 </android.support.design.widget.CoordinatorLayout>
