--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,17 +18,17 @@
 
         <ImageView
                 android:id="@+id/logo"
-                android:layout_width="213dp"
-                android:layout_height="164dp"
+                android:layout_width="193dp"
+                android:layout_height="152dp"
                 app:srcCompat="@drawable/logo"
                 android:contentDescription="@string/logo"
-                android:layout_marginTop="16dp" android:layout_marginBottom="187dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/login_button"
+                android:layout_marginTop="64dp" android:layout_marginBottom="12dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/email_input"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/email_input"
-                android:layout_width="306dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:ems="10"
@@ -37,14 +37,14 @@
                 android:autofillHints="email"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginBottom="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginBottom="11dp"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/password_input"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="34dp"
-                android:layout_marginStart="34dp" android:layout_marginEnd="34dp" android:layout_marginRight="34dp"/>
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="19dp"
+                android:layout_marginStart="19dp" android:layout_marginEnd="19dp" android:layout_marginRight="19dp"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/password_input"
-                android:layout_width="304dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
@@ -53,60 +53,63 @@
                 android:autofillHints="password"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/email_input" android:layout_marginBottom="26dp"
+                app:layout_constraintTop_toBottomOf="@+id/email_input" android:layout_marginBottom="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/forgot_password_text"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="35dp"
-                android:layout_marginStart="35dp" android:layout_marginEnd="35dp" android:layout_marginRight="35dp"/>
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="19dp"
+                android:layout_marginStart="19dp" android:layout_marginEnd="19dp" android:layout_marginRight="19dp"/>
 
         <Button
                 android:text="@string/action_sign_in"
                 android:layout_width="0dp"
-                android:layout_height="77dp"
+                android:layout_height="51dp"
                 android:id="@+id/login_button"
                 android:background="@drawable/login_button"
                 android:textColor="@color/white"
                 android:textAllCaps="false"
                 style="?android:attr/borderlessButtonStyle"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="30dp"
-                android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_marginRight="30dp"
-                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="28dp"
-                app:layout_constraintBottom_toTopOf="@+id/register_button"/>
+                app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" android:layout_marginBottom="14dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/register_button"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
+                app:layout_constraintHorizontal_bias="0.0"/>
         <Button
                 android:text="@string/action_register"
-                android:layout_width="298dp"
-                android:layout_height="52dp"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
                 android:id="@+id/register_button"
                 android:textAllCaps="false"
                 android:textStyle="normal"
+                style="?android:attr/borderlessButtonStyle"
                 android:background="@drawable/register_button"
                 android:textColor="@color/white"
-                style="?android:attr/borderlessButtonStyle"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="36dp"
-                android:layout_marginStart="36dp" android:layout_marginEnd="36dp" android:layout_marginRight="36dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="24dp"
-                app:layout_constraintHorizontal_bias="0.5"/>
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="18dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.965"/>
         <TextView
                 android:text="@string/action_forgot_password"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:id="@+id/forgot_password_text"
                 android:textColor="@color/white" android:textSize="12sp"
-                app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="37dp"
+                app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="41dp"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/login_button"
                 app:layout_constraintStart_toStartOf="parent"/>
         <ProgressBar
                 style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="49dp"
                 android:id="@+id/progress_bar" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:visibility="invisible"
                 android:layout_marginStart="8dp"/>
 
     </android.support.constraint.ConstraintLayout>
