--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/email_input"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
+                android:inputType="textEmailAddress|textCapWords"
                 android:ems="10"
                 android:hint="@string/prompt_email"
                 app:backgroundTint="@color/white"
