--- a/app/src/main/res/layout/activity_change_details.xml
+++ b/app/src/main/res/layout/activity_change_details.xml
@@ -62,7 +62,7 @@
                     android:id="@+id/email_input"
                     android:layout_width="303dp"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress|textCapWords"
+                    android:inputType="textEmailAddress"
                     android:ems="10"
                     android:hint="@string/prompt_email"
                     app:backgroundTint="@color/white"
