--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -6,132 +6,145 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
-        tools:context=".DeleteAccountActivity">
+        tools:context=".AccountActivity">
 
 
-    <android.support.v7.widget.CardView
-            android:layout_width="296dp"
-            android:layout_height="131dp"
-            app:cardBackgroundColor="@color/colorAccent"
-            android:layout_marginTop="88dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
-
-        <TableLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:layout_height="124dp">
-            <TableRow>
-                <TextView
-                        android:text="@string/first_name"
-                        android:layout_width="117dp"
-                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="49dp"
-                        tools:layout_editor_absoluteX="44dp" android:id="@+id/first_name_label"
-                        android:textSize="18sp"
-                        android:paddingRight="5dp"
-                        android:textColor="@color/white"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="16dp"/>
-                <TextView
-                        android:layout_width="134dp"
-                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="49dp"
-                        tools:layout_editor_absoluteX="44dp" android:id="@+id/first_name_text"
-                        android:textSize="18sp"
-                        android:textColor="@color/white"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="16dp"/>
-            </TableRow>
-            <TableRow>
-                <TextView
-                        android:text="@string/last_name"
-                        android:paddingTop="5dp"
-                        android:paddingRight="5dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="84dp"
-                        tools:layout_editor_absoluteX="44dp" android:id="@+id/last_name_label"
-                        android:textSize="18sp"
-                        android:textColor="@color/white"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
-                <TextView
-                        android:paddingTop="5dp"
-                        android:layout_width="131dp"
-                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="84dp"
-                        tools:layout_editor_absoluteX="44dp" android:id="@+id/last_name_text"
-                        android:textSize="18sp"
-                        android:textColor="@color/white"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
-            </TableRow>
-            <TableRow>
-                <TextView
-                        android:text="@string/email"
-                        android:layout_width="wrap_content"
-                        android:paddingTop="5dp"
-                        android:paddingRight="5dp"
-                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="122dp"
-                        tools:layout_editor_absoluteX="44dp" android:id="@+id/email_label" android:textSize="18sp"
-                        android:textColor="@color/white"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
-                <TextView
-                        android:layout_width="199dp"
-                        android:paddingTop="5dp"
-                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="122dp"
-                        tools:layout_editor_absoluteX="44dp" android:id="@+id/email_text" android:textSize="18sp"
-                        android:textColor="@color/white"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
-            </TableRow>
-        </TableLayout>
-    </android.support.v7.widget.CardView>
-
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="303dp"
-            android:layout_height="182dp"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:id="@+id/linearLayout3">
-        <Button
-                android:text="@string/update_details"
-                android:layout_width="match_parent"
-                android:textAllCaps="false"
-                android:layout_marginBottom="10dp"
-                android:layout_height="wrap_content" tools:layout_editor_absoluteY="178dp"
-                android:background="@drawable/register_button"
-                style="?android:attr/borderlessButtonStyle"
-                tools:layout_editor_absoluteX="44dp" android:id="@+id/change_details_button"
-                android:textColor="@color/white"/>
-        <Button
-                android:text="@string/delete_account"
-                android:layout_width="match_parent"
-                android:layout_marginBottom="10dp"
-                style="?android:attr/borderlessButtonStyle"
-                android:background="@drawable/delete_account_button"
-                android:layout_height="wrap_content" tools:layout_editor_absoluteY="250dp"
-                tools:layout_editor_absoluteX="44dp" android:id="@+id/delete_account_button"
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:background="@drawable/new_measurement_item"
+            android:layout_height="wrap_content"
+            android:id="@+id/constraintLayout2" android:padding="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="92dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginStart="24dp">
+        <TextView
+                android:text="@string/first_name"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:id="@+id/first_name_label"
+                android:textSize="18sp"
+                android:paddingRight="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+                android:layout_width="222dp"
+                android:layout_height="0dp"
+                android:id="@+id/first_name_text"
+                android:textSize="18sp"
+                android:scrollbars="horizontal"
+                android:scrollHorizontally="true"
                 android:textColor="@color/white"
-                android:textAllCaps="false"/>
-        <Button
-                android:text="@string/sign_out"
-                android:layout_width="match_parent"
-                style="?android:attr/borderlessButtonStyle"
-                android:background="@drawable/login_button"
-                android:textAllCaps="false"
-                android:layout_height="wrap_content" tools:layout_editor_absoluteY="322dp"
-                tools:layout_editor_absoluteX="44dp" android:id="@+id/sign_out_button"
-                android:textColor="@color/white"/>
-    </LinearLayout>
+                android:maxLines="1"
+                app:layout_constraintTop_toTopOf="@+id/first_name_label"
+                app:layout_constraintBottom_toBottomOf="@+id/first_name_label"
+                app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/first_name_label"
+                android:layout_marginStart="8dp"/>
+        <TextView
+                android:text="@string/last_name"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:scrollbars="horizontal"
+                android:id="@+id/last_name_label" android:textSize="18sp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/first_name_label"
+                app:layout_constraintEnd_toEndOf="@+id/first_name_label"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:id="@+id/last_name_text"
+                android:textSize="18sp"
+                android:scrollbars="horizontal"
+                android:maxLines="1"
+                android:scrollHorizontally="true"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toTopOf="@+id/last_name_label"
+                app:layout_constraintBottom_toBottomOf="@+id/last_name_label" app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/first_name_text"
+                app:layout_constraintEnd_toEndOf="@+id/first_name_text"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:scrollbars="horizontal"
+                android:maxLines="1"
+                android:scrollHorizontally="true"
+                android:id="@+id/email_text" android:textSize="18sp"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toTopOf="@+id/email_label"
+                app:layout_constraintBottom_toBottomOf="@+id/email_label" app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/last_name_text"
+                app:layout_constraintEnd_toEndOf="@+id/last_name_text"/>
+        <TextView
+                android:text="@string/email"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:id="@+id/email_label" android:textSize="18sp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/last_name_label"
+                app:layout_constraintEnd_toEndOf="@+id/last_name_label"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:scrollbars="horizontal"
+                android:maxLines="1"
+                android:scrollHorizontally="true"
+                android:id="@+id/verification_text" android:textSize="18sp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@+id/email_text" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/email_text"
+                app:layout_constraintEnd_toEndOf="@+id/email_text" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        <TextView
+                android:text="@string/verification"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:id="@+id/varification_label" android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="@+id/email_label"
+                app:layout_constraintTop_toBottomOf="@+id/email_label" android:layout_marginTop="16dp"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
+    </android.support.constraint.ConstraintLayout>
 
 
+    <Button
+            android:text="@string/update_details"
+            android:layout_width="0dp"
+            android:textAllCaps="false"
+            android:layout_height="wrap_content"
+            android:background="@drawable/register_button"
+            style="?android:attr/borderlessButtonStyle"
+            android:id="@+id/change_details_button"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="@+id/delete_account_button"
+            app:layout_constraintEnd_toEndOf="@+id/delete_account_button" android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/delete_account_button"
+            app:layout_constraintHorizontal_bias="0.0"/>
+    <Button
+            android:text="@string/delete_account"
+            android:layout_width="0dp"
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/delete_account_button"
+            android:layout_height="wrap_content"
+            android:id="@+id/delete_account_button"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            app:layout_constraintStart_toStartOf="@+id/sign_out_button"
+            app:layout_constraintEnd_toEndOf="@+id/sign_out_button" android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/sign_out_button" app:layout_constraintHorizontal_bias="0.0"/>
+    <Button
+            android:text="@string/sign_out"
+            android:layout_width="0dp"
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/login_button"
+            android:textAllCaps="false"
+            android:layout_height="48dp"
+            android:id="@+id/sign_out_button"
+            android:textColor="@color/white"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
 
 
 </android.support.constraint.ConstraintLayout>
