--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -29,6 +29,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/add_icon"/>
+            app:borderWidth="0dp"
+            app:srcCompat="@drawable/add_icon"
+    />
+
 
 </android.support.design.widget.CoordinatorLayout>
