--- a/app/src/main/res/layout/activity_change_details.xml
+++ b/app/src/main/res/layout/activity_change_details.xml
@@ -17,91 +17,99 @@
                   android:textSize="24sp"
                   android:gravity="center_horizontal"
                   android:textColor="@color/white" android:layout_width="wrap_content"
-                  android:layout_marginTop="72dp"
+                  android:layout_marginTop="116dp"
                   app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-                  app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                  app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                  android:layout_marginRight="8dp"
                   android:layout_height="wrap_content">
 
         </TextView>
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:gravity="center_horizontal"
-                android:layout_height="207dp"
-                app:layout_constraintStart_toStartOf="@+id/title" app:layout_constraintEnd_toEndOf="@+id/title"
-                android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/title"
-                android:id="@+id/linearLayout2">
 
-            <android.support.v7.widget.AppCompatEditText
-                    android:layout_width="304dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName|textCapWords"
-                    android:autofillHints="firstname"
-                    app:backgroundTint="@color/white"
-                    android:ems="10"
-                    android:hint="@string/hint_first_name"
-                    android:id="@+id/first_name_input"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white" tools:layout_editor_absoluteY="228dp"
-                    tools:layout_editor_absoluteX="16dp"/>
-            <android.support.v7.widget.AppCompatEditText
-                    android:layout_width="303dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName|textCapWords"
-                    android:autofillHints="lastname"
-                    app:backgroundTint="@color/white"
-                    android:ems="10"
-                    android:hint="@string/hint_last_name"
-                    android:id="@+id/last_name_input"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white" tools:layout_editor_absoluteY="274dp"
-                    tools:layout_editor_absoluteX="16dp"/>
-            <android.support.v7.widget.AppCompatEditText
-                    android:id="@+id/email_input"
-                    android:layout_width="303dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:ems="10"
-                    android:hint="@string/prompt_email"
-                    app:backgroundTint="@color/white"
-                    android:autofillHints="email"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white" tools:layout_editor_absoluteY="307dp"
-                    tools:layout_editor_absoluteX="16dp"/>
-            <android.support.v7.widget.AppCompatEditText
-                    android:id="@+id/password_input"
-                    android:layout_width="303dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:hint="@string/new_password"
-                    app:backgroundTint="@color/white"
-                    android:autofillHints="password"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white" tools:layout_editor_absoluteY="353dp"
-                    tools:layout_editor_absoluteX="42dp"/>
+        <android.support.v7.widget.AppCompatEditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName|textCapWords"
+                android:autofillHints="firstname"
+                android:background="@drawable/login_item"
+                android:padding="10dp"
+                android:ems="10"
+                android:hint="@string/hint_first_name"
+                android:id="@+id/first_name_input"
+                android:textColorHint="@color/textDark"
+                android:textColor="@color/textDark"
+                android:layout_marginTop="116dp"
+                app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+        <android.support.v7.widget.AppCompatEditText
+                android:layout_width="0dp"
+                android:layout_height="44dp"
+                android:inputType="textPersonName|textCapWords"
+                android:autofillHints="lastname"
+                android:background="@drawable/login_item"
+                android:padding="10dp"
+                android:ems="10"
+                android:hint="@string/hint_last_name"
+                android:id="@+id/last_name_input"
+                android:textColorHint="@color/textDark"
+                android:textColor="@color/textDark"
+                app:layout_constraintStart_toStartOf="@+id/first_name_input"
+                app:layout_constraintEnd_toEndOf="@+id/first_name_input"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/first_name_input"/>
+        <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/email_input"
+                android:layout_width="0dp"
+                android:layout_height="44dp"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:hint="@string/prompt_email"
+                android:background="@drawable/login_item"
+                android:padding="10dp"
+                android:autofillHints="email"
+                android:textColorHint="@color/textDark"
+                android:textColor="@color/textDark"
+                app:layout_constraintStart_toStartOf="@+id/last_name_input" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="@+id/last_name_input" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/last_name_input"/>
+        <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/password_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:background="@drawable/login_item"
+                android:padding="10dp"
+                android:ems="10"
+                android:hint="@string/new_password"
+                android:autofillHints="password"
+                android:textColorHint="@color/textDark"
+                android:textColor="@color/textDark"
+                app:layout_constraintStart_toStartOf="@+id/email_input"
+                app:layout_constraintEnd_toEndOf="@+id/email_input" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/email_input"/>
 
-        </LinearLayout>
         <Button
                 android:id="@+id/update_button"
                 android:background="@drawable/login_button"
-                android:text="@string/update" android:textColor="@color/white" android:layout_height="wrap_content"
-                android:layout_width="214dp" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:text="@string/update" android:textColor="@color/white" android:layout_height="71dp"
+                android:layout_width="0dp"
                 android:textAllCaps="false"
-                android:layout_marginBottom="36dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-                app:layout_constraintVertical_bias="0.793">
+                android:stateListAnimator="@null"
+                app:layout_constraintStart_toStartOf="@+id/password_input"
+                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="64dp"
+                app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintVertical_bias="1.0">
 
         </Button>
         <ProgressBar
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:layout_editor_absoluteY="296dp" tools:layout_editor_absoluteX="156dp"
-                android:id="@+id/progress_bar"/>
+                android:id="@+id/progress_bar"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
