--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -21,70 +21,65 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView" android:textColor="@color/white"
                 android:textSize="24sp"
-                android:layout_marginTop="76dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.502"
-        />
+                android:layout_marginTop="116dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.502"/>
 
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="306dp"
-                android:layout_height="116dp"
-                android:id="@+id/linearLayout"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:layout_constraintEnd_toEndOf="@+id/textView3"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/textView3"
-                app:layout_constraintHorizontal_bias="0.469"
-        >
-            <android.support.v7.widget.AppCompatEditText
-                    android:id="@+id/email_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress|textCapWords"
-                    android:ems="10"
-                    android:hint="@string/prompt_email"
-                    app:backgroundTint="@color/white"
-                    android:autofillHints="email"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white"/>
-            =
-            <android.support.v7.widget.AppCompatEditText
-                    android:id="@+id/password_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:hint="@string/prompt_password"
-                    app:backgroundTint="@color/white"
-                    android:autofillHints="password"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white"/>
-        </LinearLayout>
+        <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/email_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress|textCapWords"
+                android:ems="10"
+                android:hint="@string/prompt_email"
+                android:background="@drawable/login_item"
+                android:padding="10dp"
+                android:autofillHints="email"
+                android:textColorHint="@color/textDark"
+                android:textColor="@color/textDark"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/enter_details_label"/>
+        =
+        <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/password_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:hint="@string/prompt_password"
+                android:background="@drawable/login_item"
+                android:padding="10dp"
+                android:autofillHints="password"
+                android:textColorHint="@color/textDark"
+                android:textColor="@color/textDark"
+                app:layout_constraintStart_toStartOf="@+id/email_input"
+                app:layout_constraintEnd_toEndOf="@+id/email_input" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/email_input"/>
         <TextView
                 android:text="@string/delete_account_warning"
                 android:layout_width="wrap_content"
-                android:layout_height="28dp"
-                android:id="@+id/textView3" android:textColor="@color/white"
-                android:layout_marginTop="132dp" app:layout_constraintTop_toBottomOf="@+id/textView"
+                android:layout_height="0dp"
+                android:id="@+id/enter_details_label" android:textColor="@color/white"
+                android:layout_marginTop="112dp" app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintStart_toStartOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="0.526"/>
         <Button
                 android:text="@string/delete"
-                android:layout_width="186dp"
+                android:layout_width="0dp"
                 android:textAllCaps="false"
                 android:background="@drawable/delete_account_button"
-                android:layout_height="wrap_content"
+                android:layout_height="71dp"
                 android:id="@+id/delete_button" android:textColor="@color/white"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-                android:layout_marginRight="8dp"
-                app:layout_constraintStart_toStartOf="@+id/linearLayout"
-                app:layout_constraintHorizontal_bias="0.535"
-                android:layout_marginBottom="44dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                app:layout_constraintVertical_bias="1.0"/>
+                android:stateListAnimator="@null"
+                app:layout_constraintStart_toStartOf="@+id/password_input"
+                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/password_input"
+                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"/>
         <ProgressBar
                 style="?android:attr/progressBarStyle"
                 android:layout_width="83dp"
