--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,14 +38,13 @@
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/logo"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/register_button"
-                app:layout_constraintVertical_bias="0.166"/>
+                app:layout_constraintTop_toBottomOf="@+id/logo"
+                android:layout_marginTop="48dp"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/password_input"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="44dp"
                 android:inputType="textPassword"
                 android:ems="10"
                 android:hint="@string/prompt_password"
@@ -63,7 +62,7 @@
                 android:id="@+id/login_button"
                 android:background="@drawable/login_button"
                 android:textAllCaps="false"
-                style="?android:attr/borderlessButtonStyle"
+                android:stateListAnimator="@null"
                 android:textColor="@color/white"
                 android:layout_marginBottom="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -82,17 +81,18 @@
                 android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/login_button"
                 app:layout_constraintStart_toStartOf="@+id/password_input"
-                app:layout_constraintEnd_toEndOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.0"/>
+                app:layout_constraintEnd_toEndOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.0"
+        />
         <TextView
                 android:text="@string/action_forgot_password"
                 android:layout_width="wrap_content"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/forgot_password_text"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/password_input"
-                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/register_button"/>
+                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/password_input"
+                android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/register_button"/>
         <ProgressBar
                 style="?android:attr/progressBarStyle"
                 android:layout_width="45dp"
