--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -95,12 +95,12 @@
                 android:layout_width="0dp"
                 android:textAllCaps="false"
                 android:background="@drawable/login_button"
-                style="?android:attr/borderlessButtonStyle"
+                android:stateListAnimator="@null"
                 android:layout_height="71dp"
                 android:id="@+id/register_button" android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="@+id/password_input"
                 android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/password_input" android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@+id/password_input" android:layout_marginTop="64dp"
                 app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintVertical_bias="1.0"
                 app:layout_constraintHorizontal_bias="1.0"/>
         <ProgressBar
