--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,11 @@
     <color name="textDark">#4A877A</color>
     <color name="colorAccent">#76D7C1</color>
 
+    <color name="colorRecentItem">#5bbda7</color>
+
     <color name="white">#FFFFFF</color>
     <color name="red">#A70000</color>
+    <color name="yellow">#ebf442</color>
 
     <color name="colorSecondary">#7F0000</color>
     <color name="colorSecondaryDark">#4e0000</color>
