--- a/app/src/main/res/layout/activity_new_measurement.xml
+++ b/app/src/main/res/layout/activity_new_measurement.xml
@@ -45,7 +45,6 @@
                         android:layout_alignParentLeft="true"
                         android:layout_height="wrap_content"
                         android:id="@+id/blood_glucose_label"
-                        android:textColor="@color/white"
                         android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.526"
                         android:layout_marginStart="28dp" app:layout_constraintStart_toStartOf="parent"
@@ -81,11 +80,10 @@
                         android:layout_alignParentLeft="true"
                         android:layout_height="wrap_content"
                         android:id="@+id/food_label"
-                        android:textColor="@color/white"
                         android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.513"
                         android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginLeft="24dp"/>
+                />
                 <android.support.v7.widget.SwitchCompat
                         android:layout_width="wrap_content"
                         android:layout_height="56dp"
@@ -117,11 +115,10 @@
                         android:layout_alignParentLeft="true"
                         android:layout_height="wrap_content"
                         android:id="@+id/exercise_label"
-                        android:textColor="@color/white"
                         android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.513"
                         android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginLeft="24dp"/>
+                />
                 <android.support.v7.widget.SwitchCompat
                         android:layout_width="wrap_content"
                         android:layout_height="56dp"
@@ -153,11 +150,10 @@
                         android:layout_alignParentLeft="true"
                         android:layout_height="wrap_content"
                         android:id="@+id/symptoms_title"
-                        android:textColor="@color/white"
                         android:textSize="14sp"
                         android:layout_marginTop="16dp"
                         app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
-                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"/>
+                        app:layout_constraintStart_toStartOf="parent"/>
                 <android.support.v7.widget.AppCompatCheckBox
                         android:text="@string/frequent_urination"
                         android:theme="@style/checkTheme"
@@ -297,10 +293,9 @@
                         android:layout_alignParentLeft="true"
                         android:layout_height="16dp"
                         android:id="@+id/medications_title"
-                        android:textColor="@color/white"
                         android:textSize="14sp"
                         android:layout_marginStart="28dp"
-                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"
+                        app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
                 <android.support.v7.widget.AppCompatEditText
                         android:layout_width="268dp"
@@ -334,10 +329,9 @@
                         android:layout_alignParentLeft="true"
                         android:layout_height="16dp"
                         android:id="@+id/notes_title"
-                        android:textColor="@color/white"
                         android:textSize="14sp"
                         android:layout_marginStart="28dp"
-                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"
+                        app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
                 <android.support.v7.widget.AppCompatEditText
                         android:layout_width="265dp"
