--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -5,129 +5,181 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:fillViewport="true">
-<android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/home_layout"
-        android:background="@color/colorPrimary"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/app_bar_home"
-        tools:context=".HomeActivity">
-
-    <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="171dp"
-            android:layout_height="163dp"
-            android:id="@+id/progressBar2"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="@+id/guideline"/>
     <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:background="@drawable/new_measurement_item"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar2" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="36dp" android:id="@+id/recent_container">
-
-        <TextView
-                android:text="@string/recent"
+            android:id="@+id/home_layout"
+            android:background="@color/colorPrimary"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:showIn="@layout/app_bar_home"
+            tools:context=".HomeActivity">
+        <android.support.constraint.Guideline
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:id="@+id/recent_label" android:textSize="18sp"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
-        <!--<android.support.constraint.ConstraintLayout-->
-        <!--android:layout_width="0dp"-->
-        <!--android:background="@drawable/recent_item"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:clickable="true"-->
-        <!--android:id="@+id/constraintLayout" app:layout_constraintStart_toStartOf="@+id/constraintLayout3"-->
-        <!--app:layout_constraintEnd_toEndOf="@+id/constraintLayout3" android:layout_marginTop="8dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">-->
+                android:layout_height="wrap_content" app:layout_constraintGuide_begin="48dip"
+                android:id="@+id/guideline"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"/>
 
-        <!--<TextView-->
-        <!--android:text="11:34"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content" android:id="@+id/textView5"-->
-        <!--android:textSize="18sp"-->
-        <!--app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"-->
-        <!--app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="8dp"-->
-        <!--app:layout_constraintEnd_toStartOf="@+id/textView6"/>-->
-        <!--<TextView-->
-        <!--android:text="5.1 mmol/L"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/textView6" android:textSize="14sp"-->
-        <!--app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"-->
-        <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>-->
-        <!--</android.support.constraint.ConstraintLayout>-->
-        <!--<android.support.constraint.ConstraintLayout-->
-        <!--android:layout_width="0dp"-->
-        <!--android:background="@drawable/recent_item"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:clickable="true"-->
-        <!--android:layout_marginTop="16dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/recent_label" android:id="@+id/constraintLayout3"-->
-        <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">-->
 
-        <!--<TextView-->
-        <!--android:text="09:45"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content" android:id="@+id/textView5"-->
-        <!--android:textSize="18sp"-->
-        <!--app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"-->
-        <!--app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="8dp"-->
-        <!--app:layout_constraintEnd_toStartOf="@+id/textView6"/>-->
-        <!--<TextView-->
-        <!--android:text="4.6 mmol/L"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/textView6" android:textSize="14sp"-->
-        <!--app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"-->
-        <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>-->
-        <!--</android.support.constraint.ConstraintLayout>-->
-        <!--<com.example.diabetesapp.view.RecentItem-->
-        <!--android:layout_height="82dp"-->
-        <!--android:layout_width="330dp"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.121"-->
-        <!--android:id="@+id/recentItem" android:layout_marginTop="4dp"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/recent_label">-->
-
-        <!--</com.example.diabetesapp.view.RecentItem>-->
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/recent_label" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:id="@+id/recentLinearLayout">
-
-        </LinearLayout>
-        <TextView
-                android:text="@string/see_more"
-                android:layout_width="wrap_content"
-                android:clickable="true"
-                android:layout_height="wrap_content"
-                android:id="@+id/see_more_label" app:layout_constraintEnd_toEndOf="parent"
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/score_container"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="12dp"
-                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/recentLinearLayout"/>
+                android:background="@drawable/score_container"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline"
+                app:layout_constraintHorizontal_bias="0.497"
+                android:layout_marginTop="50dp">
+
+            <TextView
+                    android:text="94%"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/score_text"
+                    android:textSize="50sp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:textColor="@color/scoreGood"/>
+            <TextView
+                    android:text="@string/score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/score_label" android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/score_text" app:layout_constraintVertical_bias="0.812"/>
+        </android.support.constraint.ConstraintLayout>
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/graph_container"
+                android:layout_width="match_parent"
+                android:layout_height="266dp"
+                android:background="@drawable/new_measurement_item"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="1.0"
+                android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/score_container">
+            <TextView
+                    android:text="@string/today_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:id="@+id/today_label" android:textSize="18sp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+            <com.github.mikephil.charting.charts.LineChart
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:id="@+id/graphView"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="24dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/today_label">
+
+            </com.github.mikephil.charting.charts.LineChart>
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/recent_container"
+                android:layout_width="0dp"
+                android:background="@drawable/new_measurement_item"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/graph_container"
+                android:layout_marginBottom="64dp" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+
+            <TextView
+                    android:text="@string/recent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:id="@+id/recent_label" android:textSize="18sp"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/recent_label"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:id="@+id/recentLinearLayout">
+
+            </LinearLayout>
+            <TextView
+                    android:text="@string/see_more"
+                    android:layout_width="wrap_content"
+                    android:clickable="true"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/see_more_label" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="12dp"
+                    android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/recentLinearLayout"/>
+        </android.support.constraint.ConstraintLayout>
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/hints_container"
+                android:layout_width="0dp"
+                android:background="@drawable/new_measurement_item"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/recent_container"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                app:layout_constraintHorizontal_bias="0.333" android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">
+
+            <TextView
+                    android:text="@string/hints_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:id="@+id/hints_label" android:textSize="18sp"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:id="@+id/hintsLinearLayout"
+                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/hints_label" android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">
+                <android.support.constraint.ConstraintLayout
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/recent_item"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:id="@+id/recent_item_container">
+
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" android:id="@+id/hint_text_view"
+                            android:textSize="14sp"
+                            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
+                            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
+                            app:layout_constraintVertical_bias="0.0"
+                            android:text="@string/measure_more_hint" android:layout_marginEnd="16dp"
+                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
+                            app:layout_constraintStart_toStartOf="parent"/>
+                </android.support.constraint.ConstraintLayout>
+
+            </LinearLayout>
+
+        </android.support.constraint.ConstraintLayout>
+
     </android.support.constraint.ConstraintLayout>
-    <android.support.constraint.Guideline
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:layout_constraintGuide_begin="48dip" android:id="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"/>
-</android.support.constraint.ConstraintLayout>
 </ScrollView>
