--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -19,7 +19,7 @@
                 android:text="@string/delete_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView" android:textColor="@color/white"
+                android:id="@+id/email_text_view" android:textColor="@color/white"
                 android:textSize="24sp"
                 android:layout_marginTop="116dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -64,9 +64,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:id="@+id/enter_details_label" android:textColor="@color/white"
-                android:layout_marginTop="112dp" app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:layout_constraintStart_toStartOf="@+id/textView"
-                app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="0.526"/>
+                android:layout_marginTop="112dp" app:layout_constraintTop_toBottomOf="@+id/email_text_view"
+                app:layout_constraintStart_toStartOf="@+id/email_text_view"
+                app:layout_constraintEnd_toEndOf="@+id/email_text_view" app:layout_constraintHorizontal_bias="0.526"/>
         <Button
                 android:text="@string/delete"
                 android:layout_width="0dp"
