--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
                 android:text="@string/action_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView" android:textColor="@color/white"
+                android:id="@+id/email_text_view" android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="116dp" app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
                 android:textColorHint="@color/textDark" android:textColor="@color/textDark"
                 android:layout_marginTop="112dp"
                 android:padding="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/email_text_view" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"/>
