--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,5 +42,9 @@
         <item name="colorAccent">@color/colorPrimaryDark</item>
         <item name="android:buttonTint">@color/colorPrimaryDark</item>
     </style>
+    <style name="AppTheme.Launcher.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 
 </resources>
